# microservice

./: microservice.py  pyproject.toml  setup.py
microservice/: __init__.py  microservice.py
